<resources>
    <string name="app_name">Morsi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Password Again</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_activity__register">Activity_Register</string>
    <string name="prompt_user">User Name</string>
    <string name="error_invalid_password2">Type the password again.</string>
    <string name="title_activity_activity__all_user_list">Activity_AllUserList</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="message_hint">Message...</string>
</resources>
